RESTHelper Test corrected